--- a/index.html
+++ b/index.html
@@ -2603,154 +2603,154 @@
                         "type": "music",
                         "title": "Dj Mega[tron] - 1980s Flow",
                         "duration": "2:33",
-                        "videoSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-1980%E2%80%99s%20FLOW.mp3"
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-1980%E2%80%99s%20FLOW.mp3"
                     },
                     {
                         "id": 124,
                         "type": "music",
                         "title": "Dj Mega[tron] - Ion Fuck Wit You",
                         "duration": "3:30",
-                        "videoSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-ION%20FUCK%20WIT%20YOU.mp3"
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-ION%20FUCK%20WIT%20YOU.mp3"
                     },
                     {
                         "id": 125,
                         "type": "music",
                         "title": "Dj Mega[tron] - Feels Good To Be Gangsta",
                         "duration": "4:06",
-                        "videoSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-FEELS%20GOOD%20TO%20BE%20A%20GANGSTA.mp3"
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-FEELS%20GOOD%20TO%20BE%20A%20GANGSTA.mp3"
                     },
                     {
                         "id": 126,
                         "type": "music",
                         "title": "Dj Mega[tron] - MEGAVELI ",
                         "duration": "3:16",
-                        "videoSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D%20-%20%20MEGAVELI%20%20%20%20%20%20%20%20PROD%20BY%20CARTEKEYS.mp3"
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D%20-%20%20MEGAVELI%20%20%20%20%20%20%20%20PROD%20BY%20CARTEKEYS.mp3"
                     },
                     {
                         "id": 127,
                         "type": "music",
                         "title": "Dj Mega[tron] - Hot 40 Dollars",
                         "duration": "3:30",
-                        "videoSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-%20HOT%2040%20DOLLARS.mp3"
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-%20HOT%2040%20DOLLARS.mp3"
                     },
                     {
                         "id": 128,
                         "type": "music",
                         "title": "Dj Mega[tron] - WHERE YOU BEEN",
                         "duration": "3:27",
-                        "videoSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D%20-%20WHERE%20YOU%20BEEN%20-%20%20PROD%20%20BY%20CARTEKEYS.mp3"
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D%20-%20WHERE%20YOU%20BEEN%20-%20%20PROD%20%20BY%20CARTEKEYS.mp3"
                     },
                     {
                         "id": 129,
                         "type": "music",
                         "title": "Dj Mega[tron] - Lies ",
                         "duration": "3:20",
-                        "videoSrc": "https://www.youtube.com/embed/7Yc1kV1rQ5s"
+                        "audioSrc": "https://www.youtube.com/embed/7Yc1kV1rQ5s"
                     },
                     {
                         "id": 130,
                         "type": "music",
                         "title": "Dj Mega[tron] - W.I.M.L",
                         "duration": "3:35",
-                        "videoSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-W.I.M.L.mp3"
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-W.I.M.L.mp3"
                     },
                     {
                         "id": 131,
                         "type": "music",
                         "title": "Dj Mega[tron] - Shake",
                         "duration": "2:47",
-                        "videoSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-%20%20SHAKE.MP3"
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-%20%20SHAKE.MP3"
                     },
                     {
                         "id": 132,
                         "type": "music",
                         "title": "Dj Mega[tron] - Thin Line",
                         "duration": "4:03",
-                        "videoSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-%20THIN%20LINE%20%20%20%20%20Prod%20by%20cartekeys.mp3"
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-%20THIN%20LINE%20%20%20%20%20Prod%20by%20cartekeys.mp3"
                     },
                     {
                         "id": 133,
                         "type": "music",
                         "title": "Dj Mega[tron] - SMOKIN///TRAPPIN",
                         "duration": "3:42",
-                        "videoSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-%20%20-%20SMOKIN___TRAPPIN%20TRON%20bycartekeys.mp3"
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-%20%20-%20SMOKIN___TRAPPIN%20TRON%20bycartekeys.mp3"
                     },
                     {
                         "id": 134,
                         "type": "music",
                         "title": "Dj Mega[tron] - Eat it // Beat it",
                         "duration": "3:12",
-                        "videoSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-%20%20%20EAT%20IT%20BEAT%20IT.mp3"
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-%20%20%20EAT%20IT%20BEAT%20IT.mp3"
                     },
                     {
                         "id": 135,
                         "type": "music",
                         "title": "Dj Mega[tron] - POPS // AKA(TYRONE  C ASIA)",
                         "duration": "4:05",
-                        "videoSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-%20POPS%20AKA%20TYRONE%20MEGATRON%20-%20Prod%20cartekeys.mp3"
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-%20POPS%20AKA%20TYRONE%20MEGATRON%20-%20Prod%20cartekeys.mp3"
                     },
                     {
                         "id": 136,
                         "type": "music",
                         "title": "Dj Mega[tron] - OLD GANGSTA Ft Carte Keys",
                         "duration": "3:42",
-                        "videoSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-%20OLD%20GANSTA%20%20%20ft%20cartekeys.mp3"
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-%20OLD%20GANSTA%20%20%20ft%20cartekeys.mp3"
                     },
                     {
                         "id": 137,
                         "type": "music",
                         "title": "Dj Mega[tron] - Flowers",
                         "duration": "1:42",
-                        "videoSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-FLOWERS.mp3"
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-FLOWERS.mp3"
                     },
                     {
                         "id": 138,
                         "type": "music",
                         "title": "Dj Mega[tron] -  Count it up",
                         "duration": "3:57",
-                        "videoSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-%20COUNT%20IT%20UP%20-%20prod%20by%20cartekeys.mp3"
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-%20COUNT%20IT%20UP%20-%20prod%20by%20cartekeys.mp3"
                     },
                     {
                         "id": 139,
                         "type": "music",
                         "title": "Dj Mega[tron] - Happiness",
                         "duration": "3:27",
-                        "videoSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-%20%20HAPPINESS.mp3"
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-%20%20HAPPINESS.mp3"
                     },
                     {
                         "id": 140,
                         "type": "music",
                         "title": "Dj Mega[tron] - Black Man",
                         "duration": "3:02",
-                        "videoSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-%20BLACK%20MAN%20-%20prod%20by%20cartekeys.mp3"
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-%20BLACK%20MAN%20-%20prod%20by%20cartekeys.mp3"
                     },
                     {
                         "id": 141,
                         "type": "music",
                         "title": "Dj Mega[tron] - Cook it Up",
                         "duration": "4:17",
-                        "videoSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-%20COOK%20IT%20UP%20-%20prod%20by%20cartekeys.mp3"
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-%20COOK%20IT%20UP%20-%20prod%20by%20cartekeys.mp3"
                     },
                     {
                         "id": 142,
                         "type": "music",
                         "title": "Dj Mega[tron] - Loli Pop",
                         "duration": "3:14",
-                        "videoSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-%20Loti%20pop%20%20%20prod%20by%20cartekeys.mp3"
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-%20Loti%20pop%20%20%20prod%20by%20cartekeys.mp3"
                     },
                     {
                         "id": 143,
                         "type": "music",
                         "title": "Dj Mega[tron] - Mega Grind",
                         "duration": "3:07",
-                        "videoSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-%20%20MEGA%20GRIND%20MEGA(Tron)%20prod%20by%20cartekeys.mp3"
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-%20%20MEGA%20GRIND%20MEGA(Tron)%20prod%20by%20cartekeys.mp3"
                     },
                     {
                         "id": 144,
                         "type": "music",
                         "title": "Dj Mega[tron] - Who Shot Ricky",
                         "duration": "4:15",
-                        "videoSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-%20WHO%20SHOT%20.mp3"
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-%20WHO%20SHOT%20.mp3"
                     }
                 ]
             }
