Update album cover images in index.html

--- a/index.html
+++ b/index.html
@@ -1682,7 +1682,7 @@
             {
                 "id": 1,
                 "title": "Old Man Swag",
-                "cover": "https://raw.githubusercontent.com/coolwinner678/members-area/main/Dj-Mega-Tron-Logo.png",
+                "cover": "https://raw.githubusercontent.com/coolwinner678/members-area/main/Old-Man-Swag.png",
                 "year": "2022",
                 "description": "The first collection of bangers from DJ Megatron",
                 "tracks": [
@@ -1833,7 +1833,7 @@
             {
                 "id": 2,
                 "title": "Hatin",
-                "cover": "https://raw.githubusercontent.com/coolwinner678/members-area/main/white-Dj-Mega-Tron-Logo.jpg",
+                "cover": "https://raw.githubusercontent.com/coolwinner678/members-area/main/hatin.png",
                 "year": "2022",
                 "description": "Street anthems and urban stories",
                 "tracks": [
@@ -1982,7 +1982,7 @@
             {
                 "id": 3,
                 "title": "Frienemies",
-                "cover": "https://raw.githubusercontent.com/coolwinner678/members-area/main/DJ-Megatron-logo-yellow.jpg",
+                "cover": "https://raw.githubusercontent.com/coolwinner678/members-area/main/frienemies.png",
                 "year": "2022",
                 "description": "Legends are born in the streets",
                 "tracks": [
@@ -2303,7 +2303,7 @@
             {
                 "id": 5,
                 "title": "Bad Man",
-                "cover": "https://raw.githubusercontent.com/coolwinner678/members-area/main/white-Dj-Mega-Tron-Logo.jpg",
+                "cover": "https://raw.githubusercontent.com/coolwinner678/members-area/main/Bad-Man.png",
                 "year": "2020-2024",
                 "description": "Hit after Hit",
                 "tracks": [
@@ -2445,7 +2445,7 @@
             {
                 "id": 6,
                 "title": "You Must Be",
-                "cover": "https://raw.githubusercontent.com/coolwinner678/members-area/main/white-Dj-Mega-Tron-Logo.jpg",
+                "cover": "https://raw.githubusercontent.com/coolwinner678/members-area/main/you-must-be.png",
                 "year": "2019",
                 "description": "Cold as Ice",
                 "tracks": [
@@ -2593,8 +2593,8 @@
             },
             {
                "id": 7,
-                "title": "OLD GANGSTA AKA MEGAVELI",
-                "cover": "https://raw.githubusercontent.com/coolwinner678/members-area/main/white-Dj-Mega-Tron-Logo.jpg",
+                "title": "Feels Good To Be A Gangsta",
+                "cover": "https://raw.githubusercontent.com/coolwinner678/members-area/main/feels-good-to-be-a-gangsta.png",
                 "year": "2023",
                 "description": "Videos & Singles",
                 "tracks": [
@@ -2756,8 +2756,8 @@
             },
             {
                 "id": 8,
-                "title": "GUNNIN BOUT MY MONEY",
-                "cover": "https://raw.githubusercontent.com/coolwinner678/members-area/main/white-Dj-Mega-Tron-Logo.jpg",
+                "title": "Got Em Mad",
+                "cover": "https://raw.githubusercontent.com/coolwinner678/members-area/main/Got-em-mad.png",
                 "year": "2023",
                 "description": "singles",
                 "tracks": [
@@ -2920,7 +2920,7 @@
             {
                     "id": 9,
                     "title": "STANDIN ON IT",
-                    "cover": "https://raw.githubusercontent.com/coolwinner678/members-area/main/white-Dj-Mega-Tron-Logo.jpg",
+                    "cover": "https://raw.githubusercontent.com/coolwinner678/members-area/main/Standin-on-it.png",
                     "year": "2023",
                     "description": "singles",
                     "tracks": [
@@ -3075,8 +3075,8 @@
             },
             {
                     "id": 10,
-                    "title": "Money Buisness Power",
-                    "cover": "https://raw.githubusercontent.com/coolwinner678/members-area/main/white-Dj-Mega-Tron-Logo.jpg",
+                    "title": "F.U.N",
+                    "cover": "https://raw.githubusercontent.com/coolwinner678/members-area/main/F-U-N.png",
                     "year": "2023",
                     "description": "singles",
                     "tracks": [
@@ -3086,13 +3086,6 @@
                         "title": "Dj Mega[tron] - Da One",
                         "duration": "2:50",
                         "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-%20DA%20ONE%20%20-%20prod%20by%20Cartekeys.mp3"
-                    },
-                    {
-                        "id": 190,
-                        "type": "music",
-                        "title": "Dj Mega[tron] - Standin On It",
-                        "duration": "2:37",
-                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-%20STANDIN%20ON%20IT%20%20%20%20.mp3"
                     },
                     {
                         "id": 191,
@@ -3246,7 +3239,7 @@
             {
                     "id": 11,
                     "title": "GDN  AKA GOD DAM NIGGAZ",
-                    "cover": "https://raw.githubusercontent.com/coolwinner678/members-area/main/white-Dj-Mega-Tron-Logo.jpg",
+                    "cover": "https://raw.githubusercontent.com/coolwinner678/members-area/main/GDN.png",
                     "year": "2023",
                     "description": "singles",
                     "tracks": [
@@ -3402,7 +3395,7 @@
             {
                     "id": 12,
                     "title": "QUICK DRAW AKA PROMBLEM ",
-                    "cover": "https://raw.githubusercontent.com/coolwinner678/members-area/main/white-Dj-Mega-Tron-Logo.jpg",
+                    "cover": "https://raw.githubusercontent.com/coolwinner678/members-area/main/quickdraw.png",
                     "year": "2023",
                     "description": "singles",
                     "tracks": [
